classDiagram
    %% Admin-related domains
    direction LR

    class DISH {
        Dish ID
        Name
        Description
        Price
        Image Name
        Station
        Category
        Preparation Time
        -----------------------
        Create
        List All
        View
        Modify
        Delete
    }

    class INGREDIENT {
        Ingredient ID
        Name
        In Stock Quantity
        -----------------------
        Create
        List All
        View
        Modify
        Delete
    }

    class USER {
        User ID
        Name
        Username
        Password
        Email
        Role
        Created At
        Updated At
        -----------------------
        Create
        List All
        View
        Modify
        Delete
    }

    USER -- INGREDIENT : Creates
    DISH -- INGREDIENT : Contains
    USER -- DISH : Creates
